@@ -12,6 +12,10 @@ What's New in Python 2.7 Release Candidate 1?
 Core and Builtins
 -----------------
 
+- Issue #5211: Implicit coercion for the complex type is now completely
+  removed.  (Coercion for arithmetic operations was already removed in 2.7
+  alpha 4, but coercion for rich comparisons was accidentally left in.)
+
 - Issue #3798: Write sys.exit() message to sys.stderr to use stderr encoding
   and error handler, instead of writing to the C stderr file in utf-8
 
